log
Thu, May 15, 2025 11:17:43 AM: 
 sudoku.c | 26 ++++++++++++++++++++++++--
 1 file changed, 24 insertions(+), 2 deletions(-)
 tests:  0|0
3f0e54c
Thu, May 15, 2025 11:18:23 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
55b702a
Thu, May 15, 2025 11:19:21 AM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:57:12: error: variable 'y' set but not used [-Werror=unused-but-set-variable]
     int x, y;
            ^
sudoku.c:57:9: error: variable 'x' set but not used [-Werror=unused-but-set-variable]
     int x, y;
         ^
cc1.exe: all warnings being treated as errors
1997341
Thu, May 15, 2025 11:19:38 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
eb0723f
Thu, May 15, 2025 11:20:32 AM: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
992e3a3
Thu, May 15, 2025 11:21:47 AM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
481a9d1
